# LabaC--master-programming-task

./: var2.hpp
lab2/: CMakeLists.txt
lab2/include/: iomanip.hpp
lab2/tests/: iomanip.cpp
lab3/include/: proxy.hpp
